completed the project

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
   <body>
 
+<!-- Navbar -->
+
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid px-4">
           <a class="navbar-brand" href="#">Complex UI</a>
@@ -41,6 +43,7 @@
         </div>
       </nav>
 
+<!-- Carousal -->
 
       <div id="carouselExampleCaptions" class="carousel slide">
         <div class="carousel-inner">
@@ -79,12 +82,114 @@
         </button>
       </div>
 
+<!-- Custom Flex Section -->
 
+      <div class="container-fluid d-flex justify-content-center" style="flex-wrap: wrap;">
+        <div class="card m-2 my-lg-5" style="width: 25rem;">
+          <img src="https://images.unsplash.com/photo-1590053404184-ce4ee04f3d58?q=80&w=2908&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top" alt="...">
+          <div class="card-body">
+            <p class="card-text">In this sport of jumping from an airplane and typically executing a prolonged free fall before deploying a parachute.</p>
+          </div>
+        </div>
+        <div class="card m-2 my-lg-5" style="width: 25rem;">
+          <img src="https://plus.unsplash.com/premium_photo-1676982102134-00bcdd1ccd61?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top" alt="...">
+          <div class="card-body">
+            <p class="card-text">Mountain trekking is a type of outdoor recreational activity that involves walking & climbing through mountainous terrain.</p>
+          </div>
+        </div>
+        <div class="card m-2 my-lg-5" style="width: 25rem;">
+          <img src="https://images.unsplash.com/photo-1528127269322-539801943592?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top" alt="...">
+          <div class="card-body">
+            <p class="card-text">Boating in rivers is different than operating on an open waterway.</p>
+          </div>
+        </div>
+      </div>
 
+<!-- Photo Gallery  -->
 
+      <div class="container-fluid" style="width: 86vw;">
+        <div class="row">
+          <div class="col-4 p-1"><img src="https://images.unsplash.com/photo-1528127269322-539801943592?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="img-fluid" alt="..." style="width: 100%; height: 100%; object-fit: cover;"></div>
+          <div class="col-8">
+            <div class="row">
+              <div class="col-3 p-1"><img src="https://images.unsplash.com/photo-1528127269322-539801943592?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="img-fluid" alt="..." style="width: 100%; height: 100%; object-fit: cover;"></div>
+              <div class="col-3 p-1"><img src="https://images.unsplash.com/photo-1528127269322-539801943592?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="img-fluid" alt="..." style="width: 100%; height: 100%; object-fit: cover;"></div>
+              <div class="col-6 p-1"><img src="https://images.unsplash.com/photo-1528127269322-539801943592?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="img-fluid" alt="..." style="width: 100%; height: 100%; object-fit: cover;"></div>
+            </div>
+            <div class="row">
+              <div class="col-3 p-1"><img src="https://images.unsplash.com/photo-1528127269322-539801943592?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="img-fluid" alt="..." style="width: 100%; height: 100%; object-fit: cover;"></div>
+              <div class="col-3 p-1"><img src="https://images.unsplash.com/photo-1528127269322-539801943592?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="img-fluid" alt="..." style="width: 100%; height: 100%; object-fit: cover;"></div>
+              <div class="col-6 p-1"><img src="https://images.unsplash.com/photo-1528127269322-539801943592?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="img-fluid" alt="..." style="width: 100%; height: 100%; object-fit: cover;"></div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-4 p-1"><img src="https://images.unsplash.com/photo-1528127269322-539801943592?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="img-fluid" alt="..." style="width: 100%; height: 100%; object-fit: cover;"></div>
+          <div class="col-8 p-1"><img src="https://images.unsplash.com/photo-1528127269322-539801943592?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="img-fluid" alt="..." style="width: 100%; height: 100%; object-fit: cover;"></div>
+        </div>
+      </div>
 
+<!-- Bootstrap Card Section -->
 
+<div class="container-fluid d-flex justify-content-center" style="flex-wrap: wrap;">
+  <div class="card m-2 my-lg-5" style="width: 25rem; box-shadow: 1px 1px 10px lightgray;">
+    <img src="https://images.unsplash.com/photo-1590053404184-ce4ee04f3d58?q=80&w=2908&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
+  </div>
+  <div class="card m-2 my-lg-5" style="width: 25rem; box-shadow: 1px 1px 10px lightgray;">
+    <img src="https://plus.unsplash.com/premium_photo-1676982102134-00bcdd1ccd61?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
+  </div>
+  <div class="card m-2 my-lg-5" style="width: 25rem; box-shadow: 1px 1px 10px lightgray;">
+    <img src="https://images.unsplash.com/photo-1528127269322-539801943592?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
+  </div>
+</div>
 
+<!-- Bootstrap Footer -->
+ 
+<footer style="background-color: rgb(230, 230, 230);" class="p-4">
+    <div class="container-fluid d-md-flex justify-content-evenly">
+      <div>
+        <h5>Usefull Links</h5>
+        <ul class="p-0" style="list-style: none; color: blue; text-decoration: underline;">
+          <li><a>Link 1</a></li>
+          <li><a>Link 2</a></li>
+          <li><a>Link 3</a></li>
+        </ul>
+      </div>
+      <div>
+        <h5>More Links</h5>
+        <ul class="p-0" style="list-style: none; color: blue; text-decoration: underline;">
+          <li><a>Link 1</a></li>
+          <li><a>Link 2</a></li>
+          <li><a>Link 3</a></li>
+        </ul>
+      </div>
+      <div>
+        <h5>Contact Us</h5>
+        <p>Email:example@example.com</p>
+        <p>Phone: +1 (555) 123-4567</p>
+      </div>
+    </div>
+
+    <div class="container-md-fluid d-md-flex justify-content-between px-md-5">
+      <p>© 2023 Complex UI. All Rights Reserved.</p>
+      <a href="#navbarSupportedContent" class="btn btn-primary">Back to Top</a>
+    </div>
+</footer>
 
 
 
